# claude-doc-structure

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.ja.md  README.md  go.mod  main.go  pyproject.toml  setup.py
.claude/: ai-collaboration.md  code-patterns.md  common-patterns.md  context.md  debug-log.md  project-improvements.md  project-knowledge.md  project-specifics.md
.github/workflows/: release.yml
adaptive-friend-ai/: README.md
cmd/: init.go  merge.go  root.go  split.go  template.go  validate.go
internal/merger/: merger.go
internal/splitter/: splitter.go
templates/: CLAUDE.md
templates/.claude/: ai-collaboration.md  common-patterns.md  context.md  debug-log.md  project-improvements.md  project-knowledge.md  project-specifics.md
templates/.claude/prompts/: backend.md  development.md  frontend.md  refactoring.md
templates/.claude/templates/: api-endpoint.md  feature-request.md  screen-spec.md
templates/examples/large-project/: CLAUDE.md
templates/examples/small-project/: CLAUDE.md
templates/langs/go/: .env.example  Makefile  go.mod
templates/langs/nodejs/: .env.example  package.json
templates/langs/python/: .env.example  pyproject.toml  requirements.txt
templates/specs/: README.md  api-spec.md  api.md  screens.md  ui-spec.md
test-project/: CLAUDE.md
test-project/.claude/: common-patterns.md  context.md  debug-log.md  project-improvements.md  project-knowledge.md
test-project/specs/: api.md  screens.md
tools/cli/: claude-docs
tools/scripts/: merge_docs.py  split_docs.py
tools/tests/: test_cli.py
